# strengths

./: .readthedocs.yaml  LICENCE  MANIFEST.in  README.rst  community_and_contribution_guidelines.rst  pyproject.toml  setup.py  strengths_and_scipy.rst
.github/workflows/: build_wheels.yml
documentation/: apiref.rst  arrays_and_numbers.rst  building_and_simulating_rds.rst  building_strengths_from_source.rst  conf.py  constants.rst  dependencies.rst  diffusion_in_graph_spaces.rst  engine_collection.rst  engines.rst  fundamentals.rst  index.rst  indexing.rst  installing_and_importing_strengths.rst  json_and_dict_doc.rst  kinetics.rst  plot.rst  rdengine.rst  rdnetwork.rst  rdoutput.rst  rdscript.rst  rdspace.rst  rdsystem.rst  setting_up_initial_conditions.rst  simulation.rst  strengths_and_scipy.rst  typechecking.rst  units.rst  using_quantities_with_units.rst  using_strengths.rst  working_with_output.rst
documentation/_static/: script.js  style.css
paper/: paper.md  references.bib
src/strengths/: __init__.py  coarsegrain.py  constants.py  engine_collection.py  filepath.py  kinetics.py  kineticsrdengine.py  librdengine.py  ode.py  plot.py  rdengine.py  rdgraphspace.py  rdgridspace.py  rdnetwork.py  rdoutput.py  rdscript.py  rdspace.py  rdsystem.py  sampler.py  scipyrdengine.py  simulate.py  text_array_rw.py  typechecking.py  (+2 more)
tests/: run_all_tests.py  test_coarsegrain.py  test_graph.py  test_kinetics.py  test_librdengine.py  test_loadrds.py  test_meshgrid.py  test_rdnetwork.py  test_rdoutput.py  test_rdsystem.py  test_simulate.py  test_unitarray.py  test_units.py
(+44 files in other folders)
