[project]
name = "strengths"
version = "0.1.0"
authors = [
	{name = "Thibault Fillion"},
	{name = "Francesco Piazza"}]
description = "A package for the modeling and simulation of reaction-diffusion systems."
readme = "README.rst"
dependencies = [
	"numpy",
	"matplotlib"]

[tool.cibuildwheel]
skip = [
	"pp38-manylinux_x86_64", 
 	"pp39-manylinux_x86_64", 
  	"pp38-manylinux_i686", 
   	"pp39-manylinux_i686", 
    	"pp38-macosx_arm64", 
     	"pp39-macosx_arm64", 
      	"pp310-macosx_arm64",
        "pp38-macosx_x86_64", 
     	"pp39-macosx_x86_64", 
      	"pp310-macosx_x86_64"
       ]
